# callgraph.nvim

./: .editorconfig  .gitignore  .luacheckrc  .luarc.json  .releaserc.json  Makefile  README.md  selene.toml  stylua.toml  vim.yaml
.github/workflows/: lint.yaml  release.yaml  test.yaml
lua/callgraph/: config.lua  init.lua  lsp_adapter.lua
lua/callgraph/graph/: arrow_direction_test.lua  expected_main_out.lua  expected_notify_in.lua  exporter.lua  exporter_test.lua
lua/callgraph/lsp/: _meta.lua  adapter.lua  errors.lua  handlers.lua  listener.lua  utils.lua
lua/callgraph/tree/: node.lua  node_test.lua
scripts/: minimal_init.lua
test/Observer/: main.cpp  run.sh
test/Observer/Clients/: ClientB.hpp
test/Observer/Services/: ServiceB.hpp  ServiceCommon.hpp
test/Observer/lib/: Bus.hpp
tests/: arrow_direction_spec.lua  graph_exporter_spec.lua  test_planeary_spec.lua  tree_node_spec.lua
tests/blobs/: test_arrow_dir_incoming.dot  test_arrow_dir_mixed.dot  test_arrow_dir_outgoing.dot
tests/observer_proj/: CMakeLists.txt
tests/observer_proj/Services/: ServiceA.hpp  ServiceCommon.hpp
tests/observer_proj/lib/: Bus.hpp
tests/test/Observer/: main.cpp
tests/test/Observer/Clients/: ClientA.hpp
